--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --plugin-search-dir=. --write .",
     "cz": "cz",
     "prepare": "husky install",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "publish": "git add . && git commit -m \"publish\" && git push && surge dist/ https://nursyah.surge.sh"
   },
   "dependencies": {
     "@astrojs/rss": "^2.4.1",
