--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/prism": "^3.0.0",
     "@astrojs/rss": "^2.4.1",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^2.4.5",
