--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Dependencies
 /node_modules
 
+
 # Production
-/build
+# /build
 
 # Generated files
 .docusaurus
@@ -18,3 +19,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+pnpm-lock.yaml
