--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
+    "swizzle": "docusaurus swizzle",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "preview": "pnpm build && http-server build/ --port 5000",
+    "preview": "pnpm build && pnpm serve --port 5000",
     "git": "git add . && git commit && git push"
   },
   "dependencies": {
